# Sigma16

./: LICENSE.txt  README.txt  Sigma16.cabal  index.html  makefile  run  runcygwin
arch_pkgbuild/: PKGBUILD
datafiles/static/css/: BrowserGUI.css
datafiles/static/html/: welcome.html
datafiles/static/javascript/: s16script.js
src/docsrc/: index.txt  style.css
src/haskell/: Architecture.hs  Arithmetic.hs  Assembler.hs  Common.hs  Controller.hs  Emulator.hs  Linker.hs  Main.hs  MainTextUI.hs  Setup.hs  State.hs  Syntax.hs  SysEnv.hs  TestArith.hs  TestAsm.hs
